--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -75,4 +75,10 @@
 
 .details {
     padding: 0 30px;
-}
+} */
+
+/* Dark mode styles */
+.dark-mode {
+    background-color: #1f1f1f;
+    color: #ffffff;
+  }
