--- a/client/src/components/hourly.css
+++ b/client/src/components/hourly.css
@@ -34,7 +34,21 @@ tr:nth-child(even) {
 
 .dark-mode tr:nth-child(even) {
     background-color: #222;
-  }
+}
+
+.pagination {
+    margin: 20px 20px;
+    display: flex;
+    /* justify-content: space-around; */
+    justify-content: space-between;
+}
+
+.pagination img {
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+    width: 40px;
+}
 
 /* @media (max-width:1200px) {
     th{
